--- a/Sasmitha_Bellamkonda.ipynb
+++ b/Sasmitha_Bellamkonda.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "name": "Sasmitha_Bellamkonda.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -18,28 +16,6 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Ammu0235/ShapeAI_Python_Machine_Learning/blob/main/Sasmitha_Bellamkonda.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "XI8OgC6c0QyZ"
-      },
-      "source": [
-        "from sklearn.datasets import load_boston\n",
-        "df = load_boston()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "hebW_J_Gzz3U"
@@ -49,7 +25,19 @@
         "import pandas as pd\n",
         "import sklearn"
       ],
-      "execution_count": null,
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XI8OgC6c0QyZ"
+      },
+      "source": [
+        "from sklearn.datasets import load_boston\n",
+        "df = load_boston()\n"
+      ],
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -64,7 +52,7 @@
       "source": [
         "df.keys()"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -94,7 +82,7 @@
         "boston = pd.DataFrame(df.data, columns=df.feature_names)\n",
         "boston.head()"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -250,7 +238,7 @@
         "boston['MEDV'] = df.target\n",
         "boston.head()"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -411,7 +399,7 @@
       "source": [
         "boston.isnull()"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -680,7 +668,7 @@
       "source": [
         "  boston.isnull().sum()"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -732,7 +720,7 @@
         "print(Y_train.shape)\n",
         "print(Y_test.shape)\n"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -755,7 +743,7 @@
         " from sklearn.linear_model import LinearRegression\n",
         " from sklearn.metrics import mean_squared_error"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -772,7 +760,7 @@
         "\n",
         "lin_model.fit(X_train, Y_train)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -811,7 +799,7 @@
         "print(\"The model performance for training set\")\n",
         "print('RMSE is {}',format(rmse))"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
